--- a/Localization/zh-cn.cfg
+++ b/Localization/zh-cn.cfg
@@ -898,7 +898,7 @@ Localization
         #MechJeb_Trans_spd_act = 执行
         #MechJeb_Trans_current_spd = 当前速度
         #MechJeb_Trans_NOPANIC = 不要慌!
-        #MechJeb_Trans_PANIC = 我慌了!!!
+        #MechJeb_Trans_PANIC = 恐慌!!!
 
     //Utilities
         #MechJeb_Utilities_title = 实用工具
