--- a/Localization/zh-cn.cfg
+++ b/Localization/zh-cn.cfg
@@ -884,6 +884,22 @@ Localization
         #MechJeb_LandingGuidance_button4 = 降落在目标点
         #MechJeb_LandingGuidance_button5 = 降落在任意点
 
+        #MechJeb_LandingGuidance_Status1 = Coasting toward deceleration burn
+        #MechJeb_LandingGuidance_Status2 = Course correction DV: <<1>> m/s
+        #MechJeb_LandingGuidance_Status3 = Performing course correction of about <<1>> m/s
+        #MechJeb_LandingGuidance_Status4 = Warping to start of braking burn.
+        #MechJeb_LandingGuidance_Status5 = Braking.
+        #MechJeb_LandingGuidance_Status6 = Braking: target speed = <<1>> m/s
+        #MechJeb_LandingGuidance_Status7 = Doing high deorbit burn
+        #MechJeb_LandingGuidance_Status8 = Moving to high deorbit burn point
+        #MechJeb_LandingGuidance_Status9 = Final descent: <<1>>m above terrain
+        #MechJeb_LandingGuidance_Status10 = Killing horizontal velocity before final descent
+        #MechJeb_LandingGuidance_Status11 = Executing low deorbit burn
+        #MechJeb_LandingGuidance_Status12 = Moving to low deorbit burn point
+        #MechJeb_LandingGuidance_Status13 = Deorbit burn complete: waiting for the right moment to start braking
+        #MechJeb_LandingGuidance_Status14 = Executing low orbit plane change of about <<1>> m/s
+        #MechJeb_LandingGuidance_Status15 = Moving to low orbit plane change burn point
+        #MechJeb_LandingGuidance_Status16 = Doing deorbit burn.
 
     //Translatron
 
