working circularization at target planet
Signed-off-by: Lamont Granquist <lamont@scriptkiddie.org>

--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -98,7 +98,8 @@ Localization
         #MechJeb_adv_computing = Computing:
 
         #MechJeb_adv_reset_button = Reset
-        #MechJeb_adv_captureburn = include capture burn
+        #MechJeb_adv_captureburn = Include capture burn
+        #MechJeb_adv_periapsis = Periapsis
         #MechJeb_adv_label1 = any time now
         #MechJeb_adv_label2 = Select:
         #MechJeb_adv_label3 = Departure in
