--- a/Localization/zh-cn.cfg
+++ b/Localization/zh-cn.cfg
@@ -99,6 +99,7 @@ Localization
 
         #MechJeb_adv_reset_button = 重置
         #MechJeb_adv_captureburn = 计算捕获燃烧值
+        #MechJeb_adv_periapsis = Periapsis
         #MechJeb_adv_label1 = 现在任意时间
         #MechJeb_adv_label2 = 选择:
         #MechJeb_adv_label3 = 出发日期\u0020
