--- a/Localization/ru.cfg
+++ b/Localization/ru.cfg
@@ -1,3 +1,8 @@
+// Locale made by craftersmine
+// For misspells and errors, contact me via Discord craftersmine#7441 or Steam
+// 
+// And remember, leave no dwarf behind
+
 Localization
 {
 	ru
