--- a/Localization/ru.cfg
+++ b/Localization/ru.cfg
@@ -337,7 +337,7 @@ Localization
         #MechJeb_Ascent_status10 = Точная настройка промежуточной высоты
         #MechJeb_Ascent_status11 = Запуск гравитационный поворот
         #MechJeb_Ascent_status12 = Точная настройка апоцентра
-        #MechJeb_Ascent_status13 = Гравиционный поворот
+        #MechJeb_Ascent_status13 = Гравитационный поворот
         #MechJeb_Ascent_status14 = Движение к границе атмосферы
         #MechJeb_Ascent_status15 = Удержание Ап
 		
