--- a/Localization/ru.cfg
+++ b/Localization/ru.cfg
@@ -787,8 +787,8 @@ Localization
 		#MechJeb_SmartASS_button18 = НОРМ\n-
 		#MechJeb_SmartASS_button19 = РАД\n+
 		#MechJeb_SmartASS_button20 = РАД\n-
-		#MechJeb_SmartASS_button21 = ОРБСКР\n+
-		#MechJeb_SmartASS_button22 = ОРБСКР\n-
+		#MechJeb_SmartASS_button21 = ОТНСКР\n+
+		#MechJeb_SmartASS_button22 = ОТНСКР\n-
 		#MechJeb_SmartASS_button23 = ЦЕЛЬ\n+
 		#MechJeb_SmartASS_button24 = ЦЕЛЬ\n-
 		#MechJeb_SmartASS_button25 = ПАРАЛ\n+
