"Execute next Principia node" button now only available when Principia is loaded.

--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -596,6 +596,7 @@ Localization
         #MechJeb_NodeEd_button4 = Execute next node
         #MechJeb_NodeEd_button5 = Execute all nodes
         #MechJeb_NodeEd_button6 = Abort node execution
+        #MechJeb_NodeEd_button7 = Execute next Principia node
 
         #MechJeb_NodeEd_checkbox1 = Auto-warp
 
