--- a/Localization/zh-cn.cfg
+++ b/Localization/zh-cn.cfg
@@ -596,6 +596,7 @@ Localization
         #MechJeb_NodeEd_button4 = 执行下一个节点
         #MechJeb_NodeEd_button5 = 执行全部节点
         #MechJeb_NodeEd_button6 = 中止节点执行
+        #MechJeb_NodeEd_button7 = 执行下一个Principia节点
 
         #MechJeb_NodeEd_checkbox1 = 自动加速
 
