--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -358,6 +358,7 @@ Localization
         #MechJeb_Ascent_button15 = Launch into plane of target
         #MechJeb_Ascent_button16 = Launch at interplanetary window
         #MechJeb_Ascent_button17 = Abort
+        #MechJeb_Ascent_LaunchToLan = Launch to target LAN
 
         #MechJeb_Ascent_label1 = Target Periapsis:
         #MechJeb_Ascent_label2 = Target Apoapsis:
@@ -412,6 +413,7 @@ Localization
         #MechJeb_Ascent_msg1 = Launching at interplanetary window
         #MechJeb_Ascent_msg2 = Launching to target plane
         #MechJeb_Ascent_msg3 = Launching to rendezvous
+        #MechJeb_Ascent_LaunchingToLAN = Launching to target LAN
 
     //Attitude Adjustment
     //CoM->Center of Mass CoL->Center of lift CoT->Center of thrust
