#1106 - adds 'Remove ALL nodes' button to Rendezvous Planer

--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -653,6 +653,7 @@ Localization
         #MechJeb_RZplan_button6 = Execute next node
         #MechJeb_RZplan_button7 = Execute all nodes
         #MechJeb_RZplan_button8 = Abort node execution
+        #MechJeb_RZplan_button9 = Remove ALL nodes
 
         #MechJeb_RZplan_checkbox = Auto-warp
 
