--- a/Localization/es-es.cfg
+++ b/Localization/es-es.cfg
@@ -650,6 +650,7 @@ Localization
         #MechJeb_RZplan_button6 = Ejecute el siguiente nodo
         #MechJeb_RZplan_button7 = Ejecute todos los nodos
         #MechJeb_RZplan_button8 = Anular la ejecución del nodo
+        #MechJeb_RZplan_button9 = Eliminar TODOS los nodos
 
         #MechJeb_RZplan_checkbox = Deformación automática
 
