--- a/Localization/ru.cfg
+++ b/Localization/ru.cfg
@@ -654,6 +654,7 @@ Localization
 		#MechJeb_RZplan_button6 = Выполнить следующую точку
 		#MechJeb_RZplan_button7 = Выполнить все точки
 		#MechJeb_RZplan_button8 = Отменить выполнение точек
+		#MechJeb_RZplan_button9 = Удалить ВСЕ маневры
 
 		#MechJeb_RZplan_checkbox = Авто-ускорение времени
 
