--- a/Localization/zh-cn.cfg
+++ b/Localization/zh-cn.cfg
@@ -651,6 +651,7 @@ Localization
         #MechJeb_RZplan_button6 = 执行下一个节点
         #MechJeb_RZplan_button7 = 执行所有节点
         #MechJeb_RZplan_button8 = 中止节点执行
+        #MechJeb_RZplan_button9 = 移除所有节点
 
         #MechJeb_RZplan_checkbox = 自动加速
 
