#1059 - adds a field for max closing velocity in Rendezvous Autopilot

--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -626,6 +626,7 @@ Localization
         #MechJeb_RZauto_label5 = Max # of phasing orbits:
         #MechJeb_RZauto_label6 = Max # of phasing orbits must be at least 5.
         #MechJeb_RZauto_label7 = Status: <<1>>
+        #MechJeb_RZauto_label8 = Max closing velocity:
 
         #MechJeb_RZauto_checkbox1 = Auto-warp
 
