1058 - allow an offset in front of / behind the target in km

--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -118,6 +118,7 @@ Localization
         #MechJeb_Hohm_intercept_only = intercept only, no capture burn (impact/flyby)
         #MechJeb_Hohm_simpleTransfer = simple coplanar Hohmann transfer
         #MechJeb_Hohm_Label1 = fractional target period offset
+        #MechJeb_Hohm_Label2 = offset behind the target
 
         #MechJeb_Hohm_Exception1 = must select a target for the bi-impulsive transfer.
         #MechJeb_Hohm_Exception2 = target for bi-impulsive transfer must be in the same sphere of influence.
