support manual LAN entry
Signed-off-by: Lamont Granquist <lamont@scriptkiddie.org>

--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -336,7 +336,6 @@ Localization
         #MechJeb_Ascent_status22 = Gravity turn
         #MechJeb_Ascent_status23 = Coasting to edge of atmosphere
         #MechJeb_Ascent_status24 = Holding AP
-        
 
         #MechJeb_NavBallGuidance_btn1 = Hide ascent navball guidance
         #MechJeb_NavBallGuidance_btn2 = Show ascent navball guidance
@@ -358,7 +357,8 @@ Localization
         #MechJeb_Ascent_button15 = Launch into plane of target
         #MechJeb_Ascent_button16 = Launch at interplanetary window
         #MechJeb_Ascent_button17 = Abort
-        #MechJeb_Ascent_LaunchToLan = Launch to target LAN
+        #MechJeb_Ascent_LaunchToTargetLan = Launch to target LAN
+        #MechJeb_Ascent_LaunchToLan = Launch to LAN
 
         #MechJeb_Ascent_label1 = Target Periapsis:
         #MechJeb_Ascent_label2 = Target Apoapsis:
@@ -408,12 +408,12 @@ Localization
         #MechJeb_Ascent_checkbox8 = Auto-warp
         #MechJeb_Ascent_checkbox9 = Skip Circularization
         #MechJeb_Ascent_checkbox10 = Edit ascent path
-        
 
         #MechJeb_Ascent_msg1 = Launching at interplanetary window
         #MechJeb_Ascent_msg2 = Launching to target plane
         #MechJeb_Ascent_msg3 = Launching to rendezvous
-        #MechJeb_Ascent_LaunchingToLAN = Launching to target LAN
+        #MechJeb_Ascent_LaunchingToTargetLAN = Launching to target LAN
+        #MechJeb_Ascent_LaunchingToManualLAN = Launching to manual LAN
 
     //Attitude Adjustment
     //CoM->Center of Mass CoL->Center of lift CoT->Center of thrust
