--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -1079,13 +1079,14 @@ Localization
         
         #MechJeb_Actiongroup_label1 = Toggle action group
 
-        #MechJeb_Ascent_checkbox21 = Support hotstaging
+        #MechJeb_Ascent_hotStaging = Support hotstaging
+        #MechJeb_Ascent_dropSolids = Drop solids early
         #MechJeb_Ascent_label38 = Stage fairings when:
         #MechJeb_Ascent_label39 = dynamic pressure
         #MechJeb_Ascent_label40 = altitude
         #MechJeb_Ascent_label41 = aerothermal flux
         #MechJeb_Ascent_label42 = Stop at stage #
-        #MechJeb_Ascent_label43 = lead time
+        #MechJeb_Ascent_leadTime = lead time
         #MechJeb_Ascent_label44 = Clamp AutoStage Thrust 
         #MechJeb_Ascent_status9 = Autostaging off
         #MechJeb_Ascent_status10 = Will autostage next stage only
