--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -256,6 +256,7 @@ Localization
         #MechJeb_ApproAndLand_label11 = Target altitude: <<1>> m
         #MechJeb_ApproAndLand_label12 = Target vertical speed: <<1>> m/s
         #MechJeb_ApproAndLand_label13 = Target heading: <<1>>º
+        #MechJeb_ApproAndLand_label14 = Glide slope:
 
         #MechJeb_ApproAndLand_approachState1 = Proceeding to the initial approach point
         #MechJeb_ApproAndLand_approachState2 = Proceeding to the final approach point
