fix some localization issues
Signed-off-by: Lamont Granquist <lamont@scriptkiddie.org>

--- a/Localization/zh-cn.cfg
+++ b/Localization/zh-cn.cfg
@@ -21,57 +21,57 @@ Localization
         #MechJeb_Maneu_Autowarp = 自动加速
 
         #MechJeb_Maneu_Tolerance = 误差:
-        
+
         #MechJeb_Maneu_Lead_time = 预留时间:
 
         #MechJeb_of = of
 
         #MechJeb_Maneu_STB = 计算燃烧值
-        
+
         #MechJeb_Maneu_TimeSelect1 = 在合适的时间
-        
+
         #MechJeb_Maneu_TimeSelect2 = 在下个远拱点
-        
+
         #MechJeb_Maneu_TimeSelect3 = 在离目标最近的距离
-        
+
         #MechJeb_Maneu_TimeSelect4 = 在AN处
-        
+
         #MechJeb_Maneu_TimeSelect5 = 在DN处
-        
+
         #MechJeb_Maneu_TimeSelect6 = 在下个近拱点
 
         #MechJeb_Maneu_TimeSelect7 = 在与目标的下一个升交点
-        
+
         #MechJeb_Maneu_TimeSelect8 = 在与目标的下一个降交点
-        
+
         #MechJeb_Maneu_TimeSelect9 = 在固定时间后
-        
+
         #MechJeb_Maneu_TimeSelect10 = 在这个海拔高度
-        
+
         #MechJeb_Maneu_TimeSelect11 = 在最近的AN/DN点
-        
+
         #MechJeb_Maneu_TimeSelect12 = 在最省燃料的AN/DN点
-        
+
         #MechJeb_Maneu_TimeSelect13 = 在最近的目标AN/DN点
-        
+
         #MechJeb_Maneu_TimeSelect14 = 在最节能的目标AN/DN点
 
         #MechJeb_Maneu_errorMessage = 创建变轨节点发生错误
-        
+
         #MechJeb_Maneu_Exception1 = 警告：轨道为双曲线，不存在远拱点。
-        
+
         #MechJeb_Maneu_Exception2 = 警告：未选择目标。
-        
+
         #MechJeb_Maneu_Exception3 = 警告：不能在此高度进行圆轨，当前轨道无法到达此高度。
-        
+
         #MechJeb_Maneu_Exception4 = 警告：赤道升交点不存在。
-        
+
         #MechJeb_Maneu_Exception5 = 警告：赤道降交点不存在。
-        
+
         #MechJeb_Maneu_Exception6 = 警告：既不存在上升节点也不存在下降节点
-        
+
         #MechJeb_Maneu_Exception7 = 警告：既不存在上升节点也不存在下降节点。
-        
+
 
         //AdvancedTransfer
         #MechJeb_AdvancedTransfer_title = 高级轨道转移
@@ -221,7 +221,7 @@ Localization
         #MechJeb_transfer_Exception4 =  从<<1>>引力范围内发出的星际间转移必须以<<2>>环绕的母星——<<3>>为目标.
 
         #MechJeb_transfer_errormsg1 = 警告:目标的轨道平面与<<2>>º的轨道平面成<<1>>º角（建议最多30度角）.计划中的星际间转移可能无法正确到达目标
-        
+
         #MechJeb_transfer_errormsg2 = 警告: 建议从与<<2>>围绕<<3>>的轨道在同一平面的轨道上的<<1>>开始进行星际间转移. 起始环绕<<4>>的轨道是倾角为 <<5>>º对<<6>>的环绕<<7>>的轨道(建议< 10º). 计划中的星际间转移可能无法正确到达目标.
 
         #MechJeb_transfer_errormsg3 = 警告:建议从接近圆形的轨道(离心率< 0.2)开始进行星际间转移.转移计划是从离心率为<<1>>的轨道开始的，因此可能无法正确与目标回合.
@@ -276,25 +276,25 @@ Localization
         #MechJeb_Aircraftauto_button4 = 隐藏PID
 
         #MechJeb_Aircraftauto_Label1 = 高度保持
-        
+
         #MechJeb_Aircraftauto_btnset1 = 设置
-        
+
         #MechJeb_Aircraftauto_Label2 = 垂直速度保持
-        
-        #MechJeb_Aircraftauto_btnset2 = 设置 
-        
+
+        #MechJeb_Aircraftauto_btnset2 = 设置
+
         #MechJeb_Aircraftauto_Label3 = 垂直速度限制
-        
+
         #MechJeb_Aircraftauto_btnset3 = 设置
-        
+
         #MechJeb_Aircraftauto_Label4 = 航向保持
-        
+
         #MechJeb_Aircraftauto_btnset4 = 设置
-        
+
         #MechJeb_Aircraftauto_Label5 = 角度保持
-    
+
         #MechJeb_Aircraftauto_btnset5 = 设置
-        
+
         #MechJeb_Aircraftauto_Label6 =     角度限制 ±
 
         #MechJeb_Aircraftauto_btnset6 = 设置
@@ -336,11 +336,11 @@ Localization
         #MechJeb_Ascent_status22 = 重力转向
         #MechJeb_Ascent_status23 = 滑行到大气层边缘
         #MechJeb_Ascent_status24 = 保持远点
-        
+
 
         #MechJeb_NavBallGuidance_btn1 = 隐藏发射路径
         #MechJeb_NavBallGuidance_btn2 = 显示发射路径
-        
+
         #MechJeb_Ascent_button1 = 脱离自动驾驶
         #MechJeb_Ascent_button2 = 自动驾驶
         #MechJeb_Ascent_button3 = 重置导航(千万不要按)
@@ -469,7 +469,7 @@ Localization
         #MechJeb_WindowEd_button4 = 向上移动
         #MechJeb_WindowEd_button5 = 向下移动
 
-        #MechJeb_WindowEd_label1 = 显示在: 
+        #MechJeb_WindowEd_label1 = 显示在:
         #MechJeb_WindowEd_label2 = 颜色:
         #MechJeb_WindowEd_label3 = 窗口内容(点击编辑):
         #MechJeb_WindowEd_label4 = 点击项目以添加至信息窗口:
@@ -502,7 +502,7 @@ Localization
 
         #MechJeb_Docking_label1 = 选择一个目标来进行对接
         #MechJeb_Docking_label2 = 警告:你需要以对接口来控制船. 右键单击一个对接口并选择"基于此处控制"
-        #MechJeb_Docking_label3 = 警告: 所选目标不是对接口. 右键单击此目标的对接口然后选择"设置为目标"		
+        #MechJeb_Docking_label3 = 警告: 所选目标不是对接口. 右键单击此目标的对接口然后选择"设置为目标"
         #MechJeb_Docking_label4 = 警告:该船只不受对接节点的控制. 右键单击一个对接节点并选择"基于此处控制"
         #MechJeb_Docking_label5 = 速度限制
         #MechJeb_Docking_label6 = 起始距离
@@ -631,14 +631,14 @@ Localization
         #MechJeb_RZauto_button2 = 取消自动
 
         #MechJeb_RZauto_statu1 = 成功对接
-		#MechJeb_RZauto_statu2 = <<1>>m内: 匹配速度中.
-		#MechJeb_RZauto_statu3 = 准备在最接近目标时匹配速度.
-		#MechJeb_RZauto_statu4 = 接近目标:绘制交会轨道
-		#MechJeb_RZauto_statu5 = 交会作业.计划在最接近目标时匹配速度.
-		#MechJeb_RZauto_statu6 = 计划<<1>>个相位轨道后进行霍曼转移交会.
-		#MechJeb_RZauto_statu7 = 下一个交会窗口将在 <<1>>个轨道外,超过了<<2>>个相位轨道的最大值. 通过在<<3>>m建立新的相位轨道来增加相位率
-		#MechJeb_RZauto_statu8 = 圆轨中.
-		#MechJeb_RZauto_statu9 = 匹配轨道中.
+        #MechJeb_RZauto_statu2 = <<1>>m内: 匹配速度中.
+        #MechJeb_RZauto_statu3 = 准备在最接近目标时匹配速度.
+        #MechJeb_RZauto_statu4 = 接近目标:绘制交会轨道
+        #MechJeb_RZauto_statu5 = 交会作业.计划在最接近目标时匹配速度.
+        #MechJeb_RZauto_statu6 = 计划<<1>>个相位轨道后进行霍曼转移交会.
+        #MechJeb_RZauto_statu7 = 下一个交会窗口将在 <<1>>个轨道外,超过了<<2>>个相位轨道的最大值. 通过在<<3>>m建立新的相位轨道来增加相位率
+        #MechJeb_RZauto_statu8 = 圆轨中.
+        #MechJeb_RZauto_statu9 = 匹配轨道中.
 
     //Rendezvous Planner
         #MechJeb_RZplan_title = 交会规划
@@ -761,8 +761,8 @@ Localization
         #MechJeb_Settings_button4 = 使用MJ2紧凑型界面皮肤
 
     //Smart A.S.S. or Smart A.C.S.
-        #MechJeb_SmartASS_title = 智能A.S.S. 
-        
+        #MechJeb_SmartASS_title = 智能A.S.S.
+
         #MechJeb_SmartACS_title = 智能A.C.S.
 
         #MechJeb_SmartASS_button1 = 轨道
@@ -852,18 +852,18 @@ Localization
         #MechJeb_LandingGuidance_label1 = 目标点坐标
         #MechJeb_LandingGuidance_label2 = 自动驾驶:
         #MechJeb_LandingGuidance_label3 = 着陆速度:
-        #MechJeb_LandingGuidance_label4 = 分级限制: 
+        #MechJeb_LandingGuidance_label4 = 分级限制:
         #MechJeb_LandingGuidance_label5 = 分级限制:
         #MechJeb_LandingGuidance_label6 = 当前状态:
         #MechJeb_LandingGuidance_label7 = 步骤:
         #MechJeb_LandingGuidance_label8 = 模式
         #MechJeb_LandingGuidance_label9 = 着陆点预测:
-        #MechJeb_LandingGuidance_Label10 = 目标点距离 = 
+        #MechJeb_LandingGuidance_Label10 = 目标点距离 =
         #MechJeb_LandingGuidance_Label11 = \n最大阻力:
         #MechJeb_LandingGuidance_Label12 = \n需要的Delta-v:
-        #MechJeb_LandingGuidance_Label13 = \n着陆时间: 
+        #MechJeb_LandingGuidance_Label13 = \n着陆时间:
         #MechJeb_LandingGuidance_Label14 = 大气刹车后的预计轨道:
-        #MechJeb_LandingGuidance_Label15 = 双曲率,离心率 = 
+        #MechJeb_LandingGuidance_Label15 = 双曲率,离心率 =
         #MechJeb_LandingGuidance_Label16 = 最大阻力:<<1>> g
         #MechJeb_LandingGuidance_Label17 = \n脱离大气:<<1>>
         #MechJeb_LandingGuidance_Label18_1 = 轨道没有再入阶段:\n
@@ -955,7 +955,7 @@ Localization
         #MechJeb_WarpHelper_label6 = 加速至\u0020
 
         #MechJeb_WarpHelper_checkbox1 = 快速加速
-        
+
         #MechJeb_WarpHelper_scrmsg = MJ : 加速暂停-在加速助手菜单中恢复
 
         #MechJeb_WarpHelper_button1 = 终止
@@ -979,7 +979,7 @@ Localization
         #MechJeb_InfoItems_button4 = 自定义
         #MechJeb_InfoItems_button5 = 实时推力
         #MechJeb_InfoItems_button6 = 0海拔推力
-        
+
         #MechJeb_InfoItems_showEmpty = 显示所有分级
         #MechJeb_InfoItems_hideEmpty = 隐藏空分级
 
@@ -987,7 +987,7 @@ Localization
         #MechJeb_InfoItems_velocityNA = 目标相对速度: (N/A)
         #MechJeb_InfoItems_velocity = 目标相对速度:
         #MechJeb_InfoItems_CopytoClipboard = 复制 纬度/经度/海拔 至剪贴板
-        
+
         #MechJeb_InfoItems_VesselSituation1 = 飞越<<1>>
         #MechJeb_InfoItems_VesselSituation2 = <<1>>的高层大气
         #MechJeb_InfoItems_VesselSituation3 = <<1>>的近地太空
@@ -1018,7 +1018,7 @@ Localization
         #MechJeb_AscentPathEd_label2 = 速度:\u0020
         #MechJeb_AscentPathEd_label3 = 转向开始高度
         #MechJeb_AscentPathEd_label4 = 或抵达速度
-        #MechJeb_AscentPathEd_label5 = 转向结束高度: 
+        #MechJeb_AscentPathEd_label5 = 转向结束高度:
         #MechJeb_AscentPathEd_label6 = 转向开始高度:
         #MechJeb_AscentPathEd_label7 = 转向开始速度:
         #MechJeb_AscentPathEd_label8 = 转向结束高度:
@@ -1049,7 +1049,7 @@ Localization
         #MechJeb_AttitudeController_label20 = 惯性
 
         #MechJeb_AttitudeController_PIDF = PID参数
-        #MechJeb_AttitudeController_PIDFactor1 = 死域 = 
+        #MechJeb_AttitudeController_PIDFactor1 = 死域 =
 
         //New Adding
         #MechJeb_Ascent_checkbox11 = 动压限制
@@ -1073,26 +1073,27 @@ Localization
         #MechJeb_HybridController_label4 = 目标扭矩
         #MechJeb_HybridController_label5 = 控制扭矩
         #MechJeb_HybridController_label6 = 惯性
-        
+
         #MechJeb_Actiongroup_label1 = 切换动作组
 
-        #MechJeb_Ascent_checkbox21 = 允许过热分级
-		#MechJeb_Ascent_label38 = 分离整流罩当:
-		#MechJeb_Ascent_label39 = 动压
-		#MechJeb_Ascent_label40 = 高度
-		#MechJeb_Ascent_label41 = 空气热通量
-		#MechJeb_Ascent_label42 = 在分级# 时停止
-		#MechJeb_Ascent_label43 = 预留时间
-		#MechJeb_Ascent_label44 = 夹具自动分离推力大小 
-		#MechJeb_Ascent_status9 = 关闭自动分级
-		#MechJeb_Ascent_status10 = 只会对下一级进行自动分级.
-		#MechJeb_Ascent_status11 = 在分级 #处停止自动分级
+        #MechJeb_Ascent_hotStaging = 允许过热分级
+        #MechJeb_Ascent_dropSolids = Drop solids early
+        #MechJeb_Ascent_label38 = 分离整流罩当:
+        #MechJeb_Ascent_label39 = 动压
+        #MechJeb_Ascent_label40 = 高度
+        #MechJeb_Ascent_label41 = 空气热通量
+        #MechJeb_Ascent_label42 = 在分级# 时停止
+        #MechJeb_Ascent_leadTime = 预留时间
+        #MechJeb_Ascent_label44 = 夹具自动分离推力大小
+        #MechJeb_Ascent_status9 = 关闭自动分级
+        #MechJeb_Ascent_status10 = 只会对下一级进行自动分级.
+        #MechJeb_Ascent_status11 = 在分级 #处停止自动分级
         #MechJeb_Ascent_status12 = 等待点火
-		#MechJeb_Ascent_status13 = 垂直上升 <<1>>m/s
-		#MechJeb_Ascent_status14 = 重力转向<<1>>°
-		#MechJeb_Ascent_status15 = 俯仰角变化程序<<1>>°
-		#MechJeb_Ascent_status16 = 警告:不稳定的导向
-		#MechJeb_Ascent_status17 = 稳定的导向
+        #MechJeb_Ascent_status13 = 垂直上升 <<1>>m/s
+        #MechJeb_Ascent_status14 = 重力转向<<1>>°
+        #MechJeb_Ascent_status15 = 俯仰角变化程序<<1>>°
+        #MechJeb_Ascent_status16 = 警告:不稳定的导向
+        #MechJeb_Ascent_status17 = 稳定的导向
 
         //TWR=Thrust to Weight Ratio
         #MechJeb_NodeBurnTime = 节点执行时间
@@ -1398,6 +1399,6 @@ Localization
         #MechJeb_TranslatronMinusspeed = 平动控制 -1速
         #MechJeb_TranslatronToggleHS = 平动控制切换 H/S
         #MechJeb_AscentAPtoggle = 切换上升远拱点
-        
+
     }
 }
