Fix Chinese Localization

--- a/Localization/zh-cn.cfg
+++ b/Localization/zh-cn.cfg
@@ -1076,7 +1076,7 @@ Localization
 
         #MechJeb_Actiongroup_label1 = 切换动作组
 
-        #MechJeb_Ascent_hotStaging = 允许过热分级
+        #MechJeb_Ascent_hotStaging = 允许热分级
         #MechJeb_Ascent_dropSolids = Drop solids early
         #MechJeb_Ascent_label38 = 分离整流罩当:
         #MechJeb_Ascent_label39 = 动压
