--- a/Localization/zh-cn.cfg
+++ b/Localization/zh-cn.cfg
@@ -904,7 +904,7 @@ Localization
 
     //Translatron
 
-        #MechJeb_Translatron_title = 自动悬停
+        #MechJeb_Translatron_title = 平动控制
         #MechJeb_Translatron_off = 关闭
         #MechJeb_Translatron_KEEP_OBT = 轨道\n保持
         #MechJeb_Translatron_KEEP_SURF = 地面\n保持
@@ -922,7 +922,7 @@ Localization
 
         #MechJeb_Utilities_label1 = 自动分级 <<1>> 启动
         #MechJeb_Utilities_label1_1 = 一次
-        #MechJeb_Utilities_label2 = 飞机安全速度
+        #MechJeb_Utilities_label2 = 飞机安全裕度
         #MechJeb_Utilities_label3 = 差速节流阀失灵\n需要安装更多的引擎
         #MechJeb_Utilities_label4 = 差速节流阀失效\n没有激活的引擎
         #MechJeb_Utilities_label5 = 差速节流阀失效\n没有解决方案
@@ -1117,7 +1117,7 @@ Localization
         #MechJeb_KineticEnergy = 动能
         #MechJeb_KineticEnergy_desc = 比动能
         #MechJeb_TimeToImpact = 撞击时间
-        #MechJeb_SuicideBurnCountdown = 再入变轨倒计时
+        #MechJeb_SuicideBurnCountdown = Suicide Burn倒计时
         #MechJeb_RCSthrust = RCS推力
         #MechJeb_RCSTranslationEfficiency = RCS转换效率
         #MechJeb_RCSdV = RCS ΔV
