wip autopilot limits

--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -314,7 +314,11 @@ Localization
 
         #MechJeb_Aircraftauto_Label10 = Roll
 
-        #MechJeb_Aircraftauto_Label11 = Yaw Control Limit
+        #MechJeb_Aircraftauto_Limits = Limits:
+        #MechJeb_Aircraftauto_RollLimit = Roll
+        #MechJeb_Aircraftauto_YawLimit = Yaw
+        #MechJeb_Aircraftauto_PitchUpLimit = Pitch up
+        #MechJeb_Aircraftauto_PitchDownLimit = Pitch down
 
     //Ascent Guidance
         #MechJeb_Ascent_title = Ascent Guidance
