add attach altitude to PVG
exposes an actually usable API to the flightpath angle constraint.

can be used to launch to 90x185 with the shuttle but attach at 120
to avoid burning up the orbiter.

Signed-off-by: Lamont Granquist <lamont@scriptkiddie.org>

--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -398,6 +398,10 @@ Localization
         #MechJeb_Ascent_label35 = Autopilot status:
         #MechJeb_Ascent_label36 = CONTROL DISABLED (AVIONICS)
         #MechJeb_Ascent_label37 = Warning: MechJeb is unable to circularize without an upgraded Tracking Station.
+        #MechJeb_Ascent_attachAlt = Attach Altitude:
+        #MechJeb_Ascent_warnAttachAltLow = Attach < Pe: periapsis insertion
+        #MechJeb_Ascent_warnAttachAltHigh = Attach > Ap: apoapsis insertion
+
 
         #MechJeb_Ascent_checkbox1 = Omit Coast
         #MechJeb_Ascent_checkbox2 = Force Roll
