--- a/Localization/es-es.cfg
+++ b/Localization/es-es.cfg
@@ -396,6 +396,9 @@ Localization
         #MechJeb_Ascent_label35 = Estado piloto automático:
         #MechJeb_Ascent_label36 = CONTROL DESACTIVADO (AVIONICA)
         #MechJeb_Ascent_label37 = Advertencia: MechJeb no puede circularizar sin una estación de seguimiento actualizada.
+        #MechJeb_Ascent_attachAlt = Attach Altitude:
+        #MechJeb_Ascent_warnAttachAltLow = Attach < Pe: periapsis insertion
+        #MechJeb_Ascent_warnAttachAltHigh = Attach > Ap: apoapsis insertion
 
         #MechJeb_Ascent_checkbox1 = Omitir Costa
         #MechJeb_Ascent_checkbox2 = Fuerza Cabeceo
