--- a/Localization/zh-cn.cfg
+++ b/Localization/zh-cn.cfg
@@ -396,6 +396,9 @@ Localization
         #MechJeb_Ascent_label35 = 自动驾驶状态:
         #MechJeb_Ascent_label36 = 控制停用(航空电子设备)
         #MechJeb_Ascent_label37 = 警告:跟踪站没有升级,MechJeb无法进行圆轨操作.
+        #MechJeb_Ascent_attachAlt = Attach Altitude:
+        #MechJeb_Ascent_warnAttachAltLow = Attach < Pe: periapsis insertion
+        #MechJeb_Ascent_warnAttachAltHigh = Attach > Ap: apoapsis insertion
 
         #MechJeb_Ascent_checkbox1 = 忽略滑行
         #MechJeb_Ascent_checkbox2 = 角度调整
