more autopilot improvements

--- a/Localization/es-es.cfg
+++ b/Localization/es-es.cfg
@@ -283,6 +283,8 @@ Localization
 
         #MechJeb_Aircraftauto_btnset2 = Fijar
 
+        #MechJeb_Aircraftauto_VS =    V/S ±
+
         #MechJeb_Aircraftauto_Label3 = Límite de velocidad vertical
 
         #MechJeb_Aircraftauto_btnset3 = Fijar
@@ -305,15 +307,18 @@ Localization
 
         #MechJeb_Aircraftauto_Label8 = Aceleración
 
-        #MecgJeb_Aircraftauto_error1 = error:<<1>> Objetivo:<<2>> Cur:<<3>>
+        #MecgJeb_Aircraftauto_error1 = Error:<<1>> Objetivo:<<2>> Cur:<<3>>
 
-        #MechJeb_Aircraftauto_Label9 = Velocidad vert
-
-        #MecgJeb_Aircraftauto_error2 = error:<<1>> Objetivo:<<2>> Cur:<<3>>
+        #MecgJeb_Aircraftauto_error2 = Error:<<1>> Objetivo:<<2>> Cur:<<3>> PID: <<4>>
 
         #MechJeb_Aircraftauto_Label10 = Balanceo
+        #MechJeb_Aircraftauto_Pitch = Pitch
 
-        #MechJeb_Aircraftauto_Label11 = Límite de control de guiñada
+        #MechJeb_Aircraftauto_Limits = Limits:
+        #MechJeb_Aircraftauto_RollLimit = Roll
+        #MechJeb_Aircraftauto_YawLimit = Yaw
+        #MechJeb_Aircraftauto_PitchUpLimit = Pitch up
+        #MechJeb_Aircraftauto_PitchDownLimit = Pitch down
 
     //Ascent Guidance
         #MechJeb_Ascent_title = Guía de ascenso
