--- a/Localization/ru.cfg
+++ b/Localization/ru.cfg
@@ -287,6 +287,8 @@ Localization
 
         #MechJeb_Aircraftauto_btnset2 = ЗДТ
 
+        #MechJeb_Aircraftauto_VS =    V/S ±
+
         #MechJeb_Aircraftauto_Label3 = Ограничение вертикальной скорости
 
         #MechJeb_Aircraftauto_btnset3 = ЗДТ
@@ -310,14 +312,16 @@ Localization
         #MechJeb_Aircraftauto_Label8 = Ускорение
 
         #MecgJeb_Aircraftauto_error1 = Ошибка:<<1>> Цель:<<2>> Тек.:<<3>>
-
-        #MechJeb_Aircraftauto_Label9 = ВертСкор
-
-        #MecgJeb_Aircraftauto_error2 = Ошибка:<<1>> Цель:<<2>> Тек.:<<3>>
+        #MecgJeb_Aircraftauto_error2 = Ошибка:<<1>> Цель:<<2>> Тек.:<<3>> PID: <<4>>
 
         #MechJeb_Aircraftauto_Label10 = Крен
+        #MechJeb_Aircraftauto_Pitch = Pitch
 
-        #MechJeb_Aircraftauto_Label11 = Лимит управления рысканьем
+        #MechJeb_Aircraftauto_Limits = Limits:
+        #MechJeb_Aircraftauto_RollLimit = Roll
+        #MechJeb_Aircraftauto_YawLimit = Yaw
+        #MechJeb_Aircraftauto_PitchUpLimit = Pitch up
+        #MechJeb_Aircraftauto_PitchDownLimit = Pitch down
 
     //Ascent Guidance
         #MechJeb_Ascent_title = Помощник подъема
