--- a/Localization/zh-cn.cfg
+++ b/Localization/zh-cn.cfg
@@ -283,6 +283,8 @@ Localization
 
         #MechJeb_Aircraftauto_btnset2 = 设置
 
+        #MechJeb_Aircraftauto_VS =    V/S ±
+
         #MechJeb_Aircraftauto_Label3 = 垂直速度限制
 
         #MechJeb_Aircraftauto_btnset3 = 设置
@@ -306,14 +308,16 @@ Localization
         #MechJeb_Aircraftauto_Label8 = 加速度
 
         #MecgJeb_Aircraftauto_error1 = 错误:<<1>> 目标:<<2>> 当前:<<3>>
-
-        #MechJeb_Aircraftauto_Label9 = 垂直速度
-
-        #MecgJeb_Aircraftauto_error2 = 错误:<<1>> 目标:<<2>> 当前:<<3>>
+        #MecgJeb_Aircraftauto_error2 = 错误:<<1>> 目标:<<2>> 当前:<<3>> PID: <<4>>
 
         #MechJeb_Aircraftauto_Label10 = 滚转角
+        #MechJeb_Aircraftauto_Pitch = Pitch
 
-        #MechJeb_Aircraftauto_Label11 = 偏航控制限制
+        #MechJeb_Aircraftauto_Limits = Limits:
+        #MechJeb_Aircraftauto_RollLimit = Roll
+        #MechJeb_Aircraftauto_YawLimit = Yaw
+        #MechJeb_Aircraftauto_PitchUpLimit = Pitch up
+        #MechJeb_Aircraftauto_PitchDownLimit = Pitch down
 
     //Ascent Guidance
         #MechJeb_Ascent_title = 自动发射
