--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -284,6 +284,8 @@ Localization
 
         #MechJeb_Aircraftauto_btnset2 = Set
 
+        #MechJeb_Aircraftauto_VS =    V/S ±
+
         #MechJeb_Aircraftauto_Label3 = Vertical Speed Limit
 
         #MechJeb_Aircraftauto_btnset3 = Set
@@ -296,7 +298,7 @@ Localization
 
         #MechJeb_Aircraftauto_btnset5 = Set
 
-        #MechJeb_Aircraftauto_Label6 =     Roll Limit ±
+        #MechJeb_Aircraftauto_Label6 =     Bank angle ±
 
         #MechJeb_Aircraftauto_btnset6 = Set
 
@@ -306,13 +308,11 @@ Localization
 
         #MechJeb_Aircraftauto_Label8 = Accceleration
 
-        #MecgJeb_Aircraftauto_error1 = error:<<1>> Target:<<2>> Cur:<<3>>
-
-        #MechJeb_Aircraftauto_Label9 = VertSpeed
-
-        #MecgJeb_Aircraftauto_error2 = error:<<1>> Target:<<2>> Cur:<<3>>
+        #MecgJeb_Aircraftauto_error1 = Error:<<1>> Target:<<2>> Cur:<<3>>
+        #MecgJeb_Aircraftauto_error2 = Error:<<1>> Target:<<2>> Cur:<<3>> PID: <<4>>
 
         #MechJeb_Aircraftauto_Label10 = Roll
+        #MechJeb_Aircraftauto_Pitch = Pitch
 
         #MechJeb_Aircraftauto_Limits = Limits:
         #MechJeb_Aircraftauto_RollLimit = Roll
