--- a/Localization/zh-cn.cfg
+++ b/Localization/zh-cn.cfg
@@ -1082,7 +1082,7 @@ Localization
         #MechJeb_Actiongroup_label1 = 切换动作组
 
         #MechJeb_Ascent_hotStaging = 允许热分级
-        #MechJeb_Ascent_dropSolids = 提前抛弃固推 \n (RO里面有的固推在燃料即将用完时推力会很低，不抛浪费dv)
+        #MechJeb_Ascent_dropSolids = 提前抛弃固推 \n (RO里面有的固推 \n 在燃料即将用完时 \n 推力会很低，不抛浪费dv \n ——译者注)
         #MechJeb_Ascent_label38 = 分离整流罩当:
         #MechJeb_Ascent_label39 = 动压
         #MechJeb_Ascent_label40 = 高度
