Oopsie, forgot a word

--- a/Localization/fr-fr.cfg
+++ b/Localization/fr-fr.cfg
@@ -1418,7 +1418,7 @@ Localization
         #MechJeb_AnatidRobotics = Anatid Robotics
         #MechJeb_AnatidRobotics_Multiversal = Anatid Robotics / Multiversal Mechatronics
         #MechJeb_MechanicalJeb2_Title = Jeb Mécanique - capsule version 2.0
-        #MechJeb_MechanicalJeb2_Description = Après des années de recherches, nos scientifiques ne pouvaient toujours pas expliquer pourquoi Jebediah Kerman était un si bon pilote, donc nous avons décidé de faire une copie mécanique de son cerveau pour aider au pilotage de nos vaisseaux. Ceci est une capsule en version robotisée de MechJeb, conçue pour les vies des courageux Kerbals qui se portent volontaires pour tester les nouveaux vaisseaux.
+        #MechJeb_MechanicalJeb2_Description = Après des années de recherches, nos scientifiques ne pouvaient toujours pas expliquer pourquoi Jebediah Kerman était un si bon pilote, donc nous avons décidé de faire une copie mécanique de son cerveau pour aider au pilotage de nos vaisseaux. Ceci est une capsule en version robotisée de MechJeb, conçue pour sauver les vies des courageux Kerbals qui se portent volontaires pour tester les nouveaux vaisseaux.
         #MechJeb_MechJeb2_Title = MechJeb 2 (boîtier AR202)
         #MechJeb_MechJeb2_Description = Une version renforcée des circuits neurologiques de MechJeb dans un boîtier à attaches radiales.
         #MechJeb_Future_ManeuverTranslatron_Title = Fonctionnalités MechJeb - Manœuvre & Translatron
