even more French fixes

--- a/Localization/fr-fr.cfg
+++ b/Localization/fr-fr.cfg
@@ -384,9 +384,9 @@ Localization
         #MechJeb_Ascent_label15 = Intervalle de guidage :
         #MechJeb_Ascent_label16 = Les intervalles de guidage doivent être compris entre 1s et 30s
         #MechJeb_Ascent_label17 = Qα limite
-        #MechJeb_Ascent_label18 = Qα limite ne peut pas être inférieur à 100 Pa-rad
-        #MechJeb_Ascent_label19 = Qα limite ne peut pas être supérieur à 10000 Pa-rad
-        #MechJeb_Ascent_label20 = Qα limite êst recommandée entre 1000 et 4000 Pa-rad
+        #MechJeb_Ascent_label18 = Qα limite ne peut pas être inférieure à 100 Pa-rad
+        #MechJeb_Ascent_label19 = Qα limite ne peut pas être supérieure à 10000 Pa-rad
+        #MechJeb_Ascent_label20 = Qα limite est recommandée entre 1000 et 4000 Pa-rad
         #MechJeb_Ascent_label21 = BOGUE : Le limiteur de g est en maintenance!
         #MechJeb_Ascent_label22 = asc. : 
         #MechJeb_Ascent_label23 = rot. : 
@@ -397,8 +397,8 @@ Localization
         #MechJeb_Ascent_label28 = statut :\u0020
         #MechJeb_Ascent_label29 = manque d'actualisation :
         #MechJeb_Ascent_label30 = DERNIER ÉCHEC :
-        #MechJeb_Ascent_label31 = LA MASSE EST DÉCENTRE DE
-        #MechJeb_Ascent_label32 = LA POUSSÉE EST DÉCENTRE DE
+        #MechJeb_Ascent_label31 = LA MASSE EST DÉCENTRÉE DE
+        #MechJeb_Ascent_label32 = LA POUSSÉE EST DÉCENTRÉE DE
         #MechJeb_Ascent_label33 = Compte à rebours :
         #MechJeb_Ascent_label34 = Sélectionnez une cible pour un lancement calculé.
         #MechJeb_Ascent_label35 = Statut du pilote automatique :
