add missing tags

--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -1426,6 +1426,8 @@ Localization
         #MechJeb_Future_RoverAutopilot_Description = Unlocks the following MechJeb windows: Rover Autopilot. Once unlocked, all existing MechJeb modules will be automatically upgraded to latest firmware.
         #MechJeb_Future_RendevousDocking_Title = MechJeb Features - Rendezvous & Docking
         #MechJeb_Future_RendevousDocking_Description = Unlocks the following MechJeb windows: Rendezvous Guidance, Rendezvous Autopilot, Docking Autopilot. Once unlocked, all existing MechJeb modules will be automatically upgraded to latest firmware.
+        #MechJeb_Future_AscentLandingSpaceplane_Title = MechJeb Features - Ascent, Landing, Spaceplane
+        #MechJeb_Future_AscentLandingSpaceplane_Description = Unlocks the following MechJeb windows: Ascent Autopilot, Landing Autopilot, Spaceplane Guidance. Once unlocked, all existing MechJeb modules will be automatically upgraded to latest firmware.
 
 
     }
