--- a/Parts/MechJeb2_AR202/part.cfg
+++ b/Parts/MechJeb2_AR202/part.cfg
@@ -178,7 +178,7 @@ PART {
     cost = 750
     category = none
     subcategory = 0
-    title = #MechJeb_Future_AscentLandingSpaceplane_Title = MechJeb Features- Ascent, Landing, Spaceplane
+    title = #MechJeb_Future_AscentLandingSpaceplane_Title // #MechJeb_Future_AscentLandingSpaceplane_Title = MechJeb Features- Ascent, Landing, Spaceplane
     manufacturer = #MechJeb_AnatidRobotics // #MechJeb_AnatidRobotics = Anatid Robotics
     description = #MechJeb_Future_AscentLandingSpaceplane_Description // #MechJeb_Future_AscentLandingSpaceplane_Description = Unlocks the following MechJeb windows: Ascent Autopilot, Landing Autopilot, Spaceplane Guidance. Once unlocked, all existing MechJeb modules will be automatically upgraded to latest firmware.
 
