--- a/MechJeb2/MechJeb2.csproj
+++ b/MechJeb2/MechJeb2.csproj
@@ -161,9 +161,11 @@
     <Compile Include="OrbitalManeuverCalculator.cs" />
     <Compile Include="PIDController.cs" />
     <Compile Include="PartExtensions.cs" />
+    <Compile Include="Pontryagin\Arc.cs" />
     <Compile Include="Pontryagin\PontryaginBase.cs" />
     <Compile Include="Pontryagin\PontryaginLaunch.cs" />
     <Compile Include="Pontryagin\PontryaginNode.cs" />
+    <Compile Include="Pontryagin\Solution.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs" />
     <Compile Include="RCSSolver.cs" />
