Fix PVG ullage motors and break apart FuelFlowSim
This adds EndThrust and switches MaxTWR to use it, switches
PVG over to using an EffectiveThrust calculation which is
effectively the average thrust over a stage.

Can't see how to easily chop up MechJeb stages into
sub-stages.

Signed-off-by: Lamont Granquist <lamont@scriptkiddie.org>

--- a/MechJeb2/MechJeb2.csproj
+++ b/MechJeb2/MechJeb2.csproj
@@ -60,6 +60,8 @@
     <Compile Include="FlyingSim\SimulatedPart.cs" />
     <Compile Include="FlyingSim\SimulatedVessel.cs" />
     <Compile Include="FuelFlowSimulation.cs" />
+    <Compile Include="FuelNode.cs" />
+    <Compile Include="FuelStats.cs" />
     <Compile Include="GLUtils.cs" />
     <Compile Include="GoodingSolver.cs" />
     <Compile Include="GuiUtils.cs" />
