Add more default window information
Many of these were hidden as "presets" that I doubt 98% of the
people that used MJ ever found.

Signed-off-by: Lamont Granquist <lamont@scriptkiddie.org>

--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -1178,10 +1178,10 @@ Localization
         #MechJeb_TargetOrbitSpeed = Target orbit speed
         #MechJeb_TargetTimeToAp = Target time to Ap
         #MechJeb_TargetTimeToPe = Target time to Pe
-        #MechJeb_TargetLAN = Target LAN
-        #MechJeb_TargetAoP = Target AoP
+        #MechJeb_TargetLAN = Target long. of ascending node
+        #MechJeb_TargetAoP = Target argument of periapsis
         #MechJeb_TargetEccentricity = Target eccentricity
-        #MechJeb_TargetSMA = Target SMA
+        #MechJeb_TargetSMA = Target semi-major axis
         #MechJeb_AtmosphericDrag = Atmospheric drag
         #MechJeb_SynodicPeriod = Synodic period
         #MechJeb_PhaseAngleToTarget = Phase angle to target
@@ -1258,7 +1258,7 @@ Localization
         #MechJeb_OrbitalPeriod = Orbital period
         #MechJeb_TimeToApoapsis = Time to apoapsis
         #MechJeb_TimeToPeriapsis = Time to periapsis
-        #MechJeb_LAN = LAN
+        #MechJeb_LAN = Long. of ascending node
         #MechJeb_ArgumentOfPeriapsis = Argument of periapsis
         #MechJeb_Inclination = Inclination
         #MechJeb_Eccentricity = Eccentricity
