--- a/MechJeb2/packages.config
+++ b/MechJeb2/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Net.Compilers" version="3.8.0" targetFramework="net472" developmentDependency="true" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
 </packages>
