Chinese translation improvement
"(to get rid of) ullage" should be "沉底"
"converge" (mathematics) should be "收敛"

--- a/Localization/zh-cn.cfg
+++ b/Localization/zh-cn.cfg
@@ -389,9 +389,9 @@ Localization
         #MechJeb_Ascent_label24 = 动压衰减
         #MechJeb_Ascent_label25 = Gain
         #MechJeb_Ascent_label26 = 发射状态:
-        #MechJeb_Ascent_label27 = 汇合:\u0020
+        #MechJeb_Ascent_label27 = 收敛:\u0020
         #MechJeb_Ascent_label28 = 状态:\u0020
-        #MechJeb_Ascent_label29 = 过时:
+        #MechJeb_Ascent_label29 = 延迟:
         #MechJeb_Ascent_label30 = 上次失败:
         #MechJeb_Ascent_label31 = 质量下降了
         #MechJeb_Ascent_label32 = 推力下降了
@@ -1061,7 +1061,7 @@ Localization
         #MechJeb_Ascent_checkbox12 = 防止引擎过热
         #MechJeb_Ascent_checkbox13 = 防止喷气引擎熄火
         #MechJeb_Ascent_checkbox14 = 防止不稳定状态点火
-        #MechJeb_Ascent_checkbox15 = 使用RCS弥补缺量
+        #MechJeb_Ascent_checkbox15 = 使用RCS执行沉底操作
         #MechJeb_Ascent_checkbox16 = 加速度限制
         #MechJeb_Ascent_checkbox17 = 节流阀限制
         #MechJeb_Ascent_checkbox18 = 限制节流阀一直超过
@@ -1324,7 +1324,7 @@ Localization
         #MechJeb_SmoothThrottle = 平滑节流阀
         #MechJeb_PreventJetFlameout = 防止飞机熄火
         #MechJeb_PreventUnstableIgnition = 防止不稳定状态点火
-        #MechJeb_UseRCStoullage = 使用RCS弥补缺量
+        #MechJeb_UseRCStoullage = 使用RCS执行沉底操作
         #MechJeb_ManageAirIntakes = 管理空气摄入量
         #MechJeb_LimitThrottle = 节流阀限制
         #MechJeb_LowerThrottleLimit = 节流阀下限
