--- a/MechJeb2Tests/packages.config
+++ b/MechJeb2Tests/packages.config
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Net.Compilers" version="2.7.0" targetFramework="net35" developmentDependency="true" />
-  <package id="NSubstitute" version="2.0.3" targetFramework="net35" />
+  <package id="NSubstitute" version="2.0.3" targetFramework="net35" requireReinstallation="true" />
   <package id="xunit" version="1.9.2" targetFramework="net35" />
-  <package id="xunit.runner.console" version="2.3.1" targetFramework="net35" developmentDependency="true" />
+  <package id="xunit.runner.console" version="2.3.1" targetFramework="net35" developmentDependency="true" requireReinstallation="true" />
   <package id="xunit.runner.visualstudio" version="2.3.1" targetFramework="net35" developmentDependency="true" />
 </packages>
