--- a/MechJeb2Tests/packages.config
+++ b/MechJeb2Tests/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="4.4.1" targetFramework="net48" />
-  <package id="Microsoft.Net.Compilers" version="4.0.1" targetFramework="net48" developmentDependency="true" />
+  <package id="FunicularSwitch" version="3.0.2" targetFramework="net48" />
+  <package id="Microsoft.Net.Compilers.Toolset" version="4.0.1" targetFramework="net48" developmentDependency="true" />
   <package id="NSubstitute" version="4.2.2" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
