Add known launch sites to LandingSites.cfg

--- a/LandingSites.cfg
+++ b/LandingSites.cfg
@@ -17,7 +17,57 @@ MechJeb2Landing
 			name = VAB
 			latitude = -0.09694444
 			longitude = -74.617
+            // body = "Kerbin" // if not set defaults to the starting world (Kerbin, Earth for RSS)
 		}
+        Site
+        {
+            name = Baikerbanur
+            latitude = 20.666
+            longitude = 146.466
+            body = Kerbin
+        }
+        Site
+        {
+            name = Cove
+            latitude = 3.70
+            longitude = -72.2
+            body = Kerbin
+        }
+        Site
+        {
+            name = Crater
+            latitude = 8.39
+            longitude = -179.68
+            body = Kerbin
+        }
+        Site
+        {
+            name = Dessert
+            latitude = 6.56
+            longitude = 143.95
+            body = Kerbin
+        }
+        Site
+        {
+            name = Glacier Lake
+            latitude = 73.56
+            longitude = 84.27
+            body = Kerbin
+        }
+        Site
+        {
+            name = Mahi Mahi
+            latitude = -49.80
+            longitude = -120.77
+            body = Kerbin
+        }
+        Site
+        {
+            name = Woomerang
+            latitude = 45.29
+            longitude = 136.11
+            body = Kerbin
+        }
 		Site
 		{
 			name = Greater Flats
@@ -31,7 +81,7 @@ MechJeb2Landing
 			latitude = -19.669238
 			longitude = 77.936054
 			body = Minmus
-		}	
+		}
 	}
 	Runways
 	{
